# interviewprep

./: .gitignore  README.md  docker-compose.yml
.claude/: README.md  settings.json
.claude/agents/: api-python.md  frontend-react.md
apps/frontend/: package.json  pnpm-lock.yaml
apps/frontend/src/: App.tsx  main.tsx
apps/frontend/src/algorithms/: bfs.ts  bubbleSort.ts  dfs.ts  insertionSort.ts  mergeSort.ts  (+2 more)
docker/: Dockerfile
services/api-python/: .env.example  alembic.ini  main.py  pyproject.toml  pyrightconfig.json
services/api-python/scripts/: create_user.py
services/api-python/src/db/: session.py  user.py
services/api-python/src/interviewprep_api/: main.py
services/api-python/src/interviewprep_api/core/: config.py
services/api-python/src/interviewprep_api/db/: application.py  leetcode.py  session.py  user.py
services/api-python/src/interviewprep_api/db/migrations/: env.py
services/api-python/src/interviewprep_api/db/migrations/versions/: 0001_create_users_table.py  0004_add_applications_and_leetcode.py  0004_apps_lc.py  3a03786022d7_add_name_fields.py
services/api-python/src/interviewprep_api/modules/applications/: repository.py  routes.py  schemas.py  service.py
services/api-python/src/interviewprep_api/modules/auth/: dependencies.py  repository.py  routes.py  schemas.py  service.py
services/api-python/src/interviewprep_api/modules/leetcode/: repository.py  routes.py  schemas.py  service.py
services/api-python/tools/: manager.py
services/api-python/tools/templates/: repository.py.j2  routes.py.j2  schemas.py.j2  service.py.j2
(+27 files in other folders)
