[project]
name = "interviewprep-api-python"
version = "0.1.0"
description = "InterviewPrep FastAPI service"
readme = "../../README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "jinja2>=3.1.6",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.15.20",
]

[tool.mypy]
python_version = "3.14"
mypy_path = ["src"]
files = ["main.py", "src"]
explicit_package_bases = true
