[project]
name = "interviewprep-api-python"
version = "0.1.0"
description = "InterviewPrep FastAPI service"
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "email-validator>=2.3.0",
    "fastapi>=0.138.2",
    "jinja2>=3.1.6",
    "psycopg>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-jose[cryptography]>=3.5.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.8",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "mypy>=1.18.2",
    "ruff>=0.15.20",
]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
files = ["main.py", "src"]
explicit_package_bases = true
